src/main/core/Tests/Stub/plugin/Valid/WithCustomActions/ValidWithCustomActions.php
<?php

/*
 * This file is part of the Claroline Connect package.
 *
 * (c) Claroline Consortium <consortium@claroline.net>
 *
 * For the full copyright and license information, please view the LICENSE
 * file that was distributed with this source code.
 */

namespace Valid\WithCustomActions;

use Claroline\CoreBundle\Library\DistributionPluginBundle;

class ValidWithCustomActions extends DistributionPluginBundle
{
}
